# aaronvargo.github.io

./: LICENSE  about.html  all-posts.html  atom.xml  index.html  rss.xml  site.cabal  stack.yaml
code/helloworld/: helloworld.cabal
css/: code.css  default.css
posts/: helloworld.html  helloworld.md
src/: Main.hs
templates/: default.html
